@@ -16,6 +16,7 @@ lib/Acme/MetaSyntactic/noughts_and_crosses.pm
 lib/Acme/MetaSyntactic/shou_dou_qi.pm
 lib/Acme/MetaSyntactic/sodor.pm
 lib/Acme/MetaSyntactic/southpark.pm
+lib/Acme/MetaSyntactic/stratego.pm
 lib/Acme/MetaSyntactic/willy_wonka.pm
 Makefile.PL
 MANIFEST
