@@ -1,3 +1,6 @@
+Version 2012060702 Thu Jun  7 19:28:51 CEST 2012
++ New theme: stratego
+
 Version 2012060701 Thu Jun  7 00:59:53 CEST 2012
 + New themes: all_in_the_family, candyland, southpark.
 
